--- a/Source/DifferenceMaker.AdminUI/Web.config
+++ b/Source/DifferenceMaker.AdminUI/Web.config
@@ -87,5 +87,14 @@
       </files>
     </defaultDocument>
     <validation validateIntegratedModeConfiguration="false" />
+    <httpProtocol>
+      <customHeaders>
+        <clear />
+        <add name="X-UA-Compatible" value="IE=edge" />
+      </customHeaders>
+    </httpProtocol>
+    <staticContent>
+      <mimeMap fileExtension=".mst" mimeType="text/plain" />
+    </staticContent>
   </system.webServer>
 </configuration>
